welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:3: error: not found: value LeveBrosse
         	avance();avance;LeveBrosse();BaisseBrosse();avance();
                                ^PictureMono:3: error: not found: value BaisseBrosse
         	avance();avance;LeveBrosse();BaisseBrosse();avance();
                                             ^