welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run(){
         def FaireV() {
         	avance();avance;LeveBrosse();BaisseBrosse();avance();
         }
}
